--- a/css/without-shoreditch-dashboard.css
+++ b/css/without-shoreditch-dashboard.css
@@ -1,17 +1,3 @@
-.supportcase__search-buttons .crm-submit-buttons.reset-advanced-search {
-    margin: 0;
-}
-
-.supportcase__search-block .supportcase__search-filters-wrap select,
-.supportcase__search-block .supportcase__search-filters-wrap input {
-    height: 24px;
-    max-width: 230px;
-}
-
-.supportcase__search-buttons {
-    margin-top: 10px;
-    margin-left: 5px;
-}
 
 .supportcase__case-tags-filter .tag-section {
     width: 300px;
